# thib

./: README.md  Timedelta.ipynb  Value_counts.ipynb  embed_images.py  iPyLoader.py  introduction.ipynb  introduction.slides.html  requirements.txt  reveal_js_tweaks.txt  rise_tweaks.txt
2018/presentation_data_cleaning/: Export_client.ipynb  Gender_Names.ipynb  Interpolation.ipynb  README.md  Randomizer.ipynb  iPyLoader.py
2019/presentation_plotly_dash/: crossfilter_hover.ipynb  crossfilter_hover.py  dual_axis_multitype_chart.ipynb  dual_axis_multitype_chart.py  presentation_plotly_dash.html  presentation_plotly_dash.ipynb  presentation_plotly_dash.py
2020/lightning_talks/: README.md  lightning_talks.ipynb  lightning_talks.slides.html  requirements.txt
2020/packaging/: README.md  presentation.ipynb  presentation.slides.html
2021/pandas_crash_course/: pandas_crash_course_final.ipynb  (+4 more)
2024/AI-powered language learning/demos/demo_1_and_2/: pyproject.toml
2024/AI-powered language learning/demos/demo_1_and_2/1_whisper_mic/: README.md
2024/AI-powered language learning/demos/demo_1_and_2/2_transcription_and_evaluation/evaluation/: 1_select_random_clips.ipynb  2_transcribe.ipynb  3_evaluate_models.ipynb  README.md  faster_whisper_helpers.py
2024/AI-powered language learning/demos/demo_1_and_2/2_transcription_and_evaluation/transcription_examples/: example_transcription_autosub.ipynb  example_transcription_whisper.ipynb
2024/AI-powered language learning/demos/demo_3/: example.srt  example_translated.srt  pyproject.toml  translate_subtitles.ipynb
(+26 files in other folders)
