[tool.poetry]
package-mode = false
name = "asr"
version = "0.1.0"
description = ""
authors = ["Thibault Betremieux <110521261+thibaultbetremieux@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
openai-whisper = "20231117"
faster-whisper = "1.0.2"
loguru = "^0.7.2"
autosub = {git = "https://github.com/BingLingGroup/autosub.git"}
ipykernel = "^6.29.4"
pandas = "^2.2.2"
jiwer = "^3.0.4"
plumbum = "^1.8.3"
protobuf = "3.20"
pangres = "^4.2.1"
ffmpeg = "^1.4"
whisper-mic = {git = "https://github.com/ThibTrip/whisper_mic.git"}
ipywidgets = "^8.1.3"
yt-dlp = "^2024.5.27"
langchain = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
