[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["Thibault Betremieux <110521261+thibaultbetremieux@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
loguru = "^0.7.2"
more-itertools = "^10.2.0"
pydantic = "^2.7.3"
ipykernel = "^6.29.4"
openai-whisper = "^20231117"
pysrt = "^1.1.2"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
